--- a/.dbtools/project.config.json
+++ b/.dbtools/project.config.json
@@ -5,7 +5,7 @@
     "version" : "25.1.1.0"
   },
   "schemas" : [ "SMUENCH" ],
-  "lastReleaseVersion" : "",
+  "lastReleaseVersion" : "1.0.0",
   "export" : {
     "format" : {
       "enable" : true
